--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -38,7 +38,7 @@
     "Got questions, ideas, or just want to connect? We're here for you. Feel free to reach out using any of the methods below, and our dedicated team will get back to you as soon as possible.": "Vous avez des questions, des idées ou souhaitez simplement vous connecter ? Nous sommes là pour vous. N'hésitez pas à nous contacter en utilisant l'une des méthodes ci-dessous et notre équipe dédiée vous répondra dans les plus brefs délais.",
     "First name": "Prénom",
     "Last name": "Nom de famille",
-    "Your phone": "Ton téléphone",
+    "Your phone": "Votre téléphone",
     "Your email": "Votre email",
     "Your message": "Votre message",
     "Send a Message": "Envoyer un message",
