--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -48,10 +48,10 @@
     "Visit Us": "Rendez nous visite",
     "Social Media": "Réseaux sociaux",
     "Ready to unlock a world of endless possibilities?": "Prêt à débloquer un monde de possibilités infinies ?",
-    "Join us at Digital Morocco and embark on a transformative journey. Dive into our vibrant community, where innovation thrives, connections flourish, and growth knows no bounds.": "Rejoignez-nous à Digital Morocco et embarquez pour un voyage transformateur. Plongez dans notre communauté dynamique, où l'innovation prospère, les connexions prospèrent et la croissance ne connaît pas de limites.",
-    "Explore more and discover how Digital Morocco can amplify your success in the digital realm.": "Explorez davantage et découvrez comment Digital Morocco peut amplifier votre succès dans le domaine numérique.",
+    "Join us at Digital Morocco and embark on a transformative journey. Dive into our vibrant community, where innovation thrives, connections flourish, and growth knows no bounds.": "Rejoignez-nous chez Digital Morocco et embarquez pour un voyage transformateur. Plongez dans notre communauté dynamique, où l'innovation prospère, les connexions fleurissent et la croissance ne connaît aucune limite.",
+    "Explore more and discover how Digital Morocco can amplify your success in the digital realm.": "Explorez davantage et découvrez comment Digital Morocco peut amplifier votre succès dans le domaine digital.",
     "Home": "Maison",
-    "Grow your business through networking and digital solutions!": "Boostez votre business grâce au networking et aux solutions digitales!",
+    "Grow your business through networking and digital solutions!": "Boostez votre business grâce au networking et aux solutions digitales !",
     "Expand your professional network, gain access to exclusive resources, and connect with individuals and organizations committed to advancing the digital landscape in Morocco.": "Élargissez votre réseau professionnel, accédez à des ressources exclusives, et connectez-vous avec des acteurs et des organisations engagés dans le développement du secteur digital au Maroc.",
     "Who are we?": "Qui sommes nous?",
     "Digital Morocco is a community of businesses, institutions, investors, and local and international experts in the digital field, working to develop skills and technologies and to qualify startups and digital projects to meet the challenges of the market and changes in the business environment in Morocco and around the world.": "Digital Morocco est une communauté d'entreprises, d'institutions, d'investisseurs, ainsi que d'experts locaux et internationaux dans le domaine numérique. Notre objectif est de développer compétences et technologies, de qualifier les startups et les projets digitaux, pour relever les défis du marché et s'adapter aux évolutions de l'environnement des affaires au Maroc et à travers le monde.",
@@ -106,7 +106,7 @@
     "The magic happens when minds come together. Digital Morocco provides a collaborative space where ideas are born": "La magie opère lorsque les esprits se rejoignent. Digital Morocco offre un espace collaboratif où les idées naissent.",
     "Your Path to Success": "Votre Chemin vers le Succès",
     "Success isn't a destination; it's a journey. With Digital Morocco as your partner, you'll navigate this journey with confidence.": "Le succès n'est pas une destination ; c'est un voyage. Avec Digital Morocco comme votre partenaire, vous entreprendrez ce voyage en toute confiance.",
-    "At Digital Morocco, we believe in the power of connectivity. By fostering meaningful connections among our members, we facilitate the exchange of ideas, expertise, and opportunities.": "Chez Digital Morocco, nous croyons au pouvoir de la connectivité. En favorisant des liens significatifs entre nos membres, nous facilitons l’échange d’idées, d’expertise et d’opportunités.",
+    "At Digital Morocco, we believe in the power of connectivity. By fostering meaningful connections among our members, we facilitate the exchange of ideas, expertise, and opportunities.": "Chez Digital Morocco, nous croyons en la puissance de la connectivité. En favorisant des connexions significatives parmi nos membres, nous facilitons l'échange d'idées, d'expertise et d'opportunités.",
     "Our platform serves as a hub where startups can find the guidance and resources they need to flourish, while investors discover promising ventures that align with their vision.": "Notre plateforme sert de plateforme où les startups peuvent trouver les conseils et les ressources dont elles ont besoin pour prospérer, tandis que les investisseurs découvrent des entreprises prometteuses qui correspondent à leur vision.",
     "We pride ourselves on curating a diverse network of industry experts who bring their wealth of knowledge and experience to the table. Through exclusive events, training sessions, and collaborative projects, we continuously strive to enhance skills, share insights, and promote transformative ideas.": "Nous sommes fiers de constituer un réseau diversifié d’experts du secteur qui apportent leur richesse de connaissances et d’expérience. Grâce à des événements exclusifs, des sessions de formation et des projets collaboratifs, nous nous efforçons continuellement d’améliorer les compétences, de partager des idées et de promouvoir des idées transformatrices.",
     "Together, we are at the forefront of the digital revolution, propelling Morocco's business landscape to new heights. Join us on this exciting journey as we collectively shape the future of the digital industry in Morocco and make a lasting impact on a global scale.": "Ensemble, nous sommes à l'avant-garde de la révolution numérique, propulsant le paysage économique marocain vers de nouveaux sommets. Rejoignez-nous dans ce voyage passionnant alors que nous façonnons collectivement l’avenir de l’industrie numérique au Maroc et que nous avons un impact durable à l’échelle mondiale.",
@@ -445,15 +445,16 @@
     "Search Country": "Rechercher un pays",
     "Select City": "Sélectionner une ville",
     "Search City": "Rechercher une ville",
-    "Keep me updated on more events and news from this event organizer": "Gardez-moi informé(e) sur d'autres événements Et actualités de cet organisateur d'événements.",
+    "Keep me updated on more events and news from this event organizer.": "Gardez-moi informé(e) sur d'autres événements Et actualités de cet organisateur d'événements.",
     "Send me emails about the best events happening nearby or online.": "Envoyez-moi des e-mails sur les meilleurs événements à venir près de chez moi ou en ligne.",
     "Select Payment Method": "Choisir le Mode de Paiement",
     "Order Summary": "Résumé De La Commande",
     "1x Ticket": "1x Billet",
+    "Ticket": "Billet",
     "Service Fee": "Frais de service",
     "Sub Total": "Sous-total",
     "Enter Promo Code": "Entrez le Code Promo",
-    "Proceed to Checkout": "Finaliser la Commande",
+    "Proceed to Checkout": "Procéder au paiement",
     "Buy Ticket":"Acheter un Billet",
     "Check Out":"Finaliser la Commande",
 
@@ -666,6 +667,22 @@
     "Industry 4.0": "Industrie 4.0", 
 
     "Prev": "Précédent",
-    "Next": "Suivant"
+    "Next": "Suivant",
+
+    "Event by":"Événement organisé par",
+    "Launch Event 2024":"Événement de lancement 2024",
+    "THE #1 PROFESSIONAL NETWORKING PLATFORM IN THE MEA REGION": "LA PREMIÈRE PLATEFORME DE RÉSEAUTAGE PROFESSIONNELLE DANS LA RÉGION MEA",
+    "Coming Soon": "Bientôt disponible",
+    "24 hours a day, 7 days a week": "24H/24 et 7j/7",
+    "The world of the Internet": "Le monde de l’Internet",
+    "Ticket Start From": "Démarrer à partir de",
+    "Location Map":"Plan d'Accès",
+    "Get Ticket": "Obtenir un Billet",
+    "From":"À partir de",
+
+    "Digital Morocco is more than just a professional networking platform, it's a dynamic ecosystem designed to foster innovation, collaboration, and growth within the entrepreneurial landscape. By connecting emerging startups, established businesses, ambitious project leaders, and visionary investors, Digital Morocco creates a space where ideas can flourish and opportunities can materialize.": "Digital Morocco va au-delà d'être une simple plateforme de networking professionnel, c'est un écosystème vibrant conçu pour stimuler l'innovation, la collaboration et la croissance au sein du paysage entrepreneurial. En reliant les startups émergentes, les entreprises établies, les porteurs de projets ambitieux et les investisseurs visionnaires, Digital Morocco crée un environnement où les idées peuvent s'épanouir et les opportunités se concrétiser.",
+    "Through our online platform, Digital Morocco members can not only expand their professional network by connecting with key players in the entrepreneurial ecosystem but also access a multitude of resources and tools to support their growth and development. Whether it's finding a business partner, exploring investment opportunities, or sharing knowledge and experiences, Digital Morocco provides an environment conducive to exchange and collaboration.":"Sur notre plateforme en ligne, les membres de Digital Morocco peuvent non seulement étendre leur réseau professionnel en se connectant avec les acteurs clés de l'écosystème entrepreneurial, mais aussi accéder à une gamme variée de ressources et d'outils pour soutenir leur croissance et leur développement. Que ce soit pour trouver un partenaire commercial, explorer des opportunités d'investissement ou partager des connaissances et des expériences, Digital Morocco offre un cadre propice à l'échange et à la collaboration.",
+    "In addition to our online presence, we also host a series of in-person events, such as conferences, workshops, seminars, and networking meetings, providing Digital Morocco members with the opportunity to meet, exchange ideas, and create synergies.": "En plus de notre présence virtuelle, nous organisons une série d'événements en personne, tels que des conférences, des ateliers, des séminaires et des rencontres de networking, offrant ainsi aux membres de Digital Morocco l'occasion de se rencontrer, d'échanger des idées et de créer des synergies.",
+    "These events are designed to inspire, educate, and motivate entrepreneurs at every stage of their journey. In summary, Digital Morocco is much more than just an online platform, it's a dynamic and dedicated community that aims to catalyze innovation and stimulate economic growth. Whether you're a budding entrepreneur, a seasoned investor, or a company seeking strategic partnerships, Digital Morocco is here to support you in achieving your goals and advancing your projects.": "Ces événements sont soigneusement conçus pour inspirer, éduquer et motiver les entrepreneurs à chaque étape de leur parcours. En conclusion, Digital Morocco représente bien plus qu'une simple plateforme en ligne, c'est une communauté dynamique et dédiée qui vise à catalyser l'innovation et à stimuler la croissance économique. Que vous soyez un entrepreneur débutant, un investisseur chevronné ou une entreprise à la recherche de partenariats stratégiques, Digital Morocco est là pour vous accompagner dans la réalisation de vos objectifs et pour faire progresser vos projets."
 
 }
