--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -507,6 +507,7 @@
     "Buy Ticket":"Acheter un Billet",
     "Check Out":"Finaliser la Commande",
     "Sales end on ": "Les ventes se terminent le ",
+    "Expired or wrong promo code!": "Code promo expiré ou erroné!",
 
 
 
