--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -24,7 +24,8 @@
     "FAQ": "FAQ",
     "Stay Tuned": "Restez informé",
     "Address": "Adresse",
-    "Try Digital Morocco for Free": "Essayez Digital Morocco gratuitement",
+    "Try Digital Morocco for free!": "Essayez Digital Morocco gratuitement !",
+    "Join the top 100 project leaders and enjoy 6 months of free access to our premier networking platform. Sign up now and connect with the best!":"Rejoignez les 100 premiers porteurs de projet et profitez de 6 mois d'accès gratuit à notre plateforme de networking de premier plan. Inscrivez-vous dès maintenant et connectez-vous avec les meilleurs !",
     "Start a 14 Day Free Trial on any of our paid plans. No credit card required.": "Commencez un essai gratuit de 14 jours sur l'une de nos formules payantes. Aucune carte de crédit requise.",
     "Terms of Use": "Conditions Générales d'Utilisation",
     "Legal Notice": "Mentions légales",
@@ -41,7 +42,8 @@
     "Your phone": "Numéro de téléphone",
     "Your email": "Adresse e-mail",
     "Your message": "Entrez votre texte",
-    "Send a Message": "Envoyer le message",
+    "Send Message": "Envoyer le message",
+    "Sent":"Envoyé",
     "General Inquiries": "Demandes générales",
     "Membership Support:": "Assistance pour les adhésions",
     "Get Started Now": "Commencer maintenant",
@@ -54,10 +56,11 @@
     "Explore further and discover how Digital Morocco can amplify your success. Unlock advanced tools and strategies to elevate your digital journey.": "Explorez comment Digital Morocco amplifie votre succès avec des outils avancés et des stratégies personnalisées.",
     "Enter your email to subscribe to our newsletter": "Entrez votre e-mail pour vous abonner à notre newsletter",
     "Subscribe":"S'abonner",
+    "Subscribed":"Abonné(e)",
     "Home": "Maison",
     "Grow your business through networking and digital solutions!": "Boostez votre business grâce au networking et aux solutions digitales !",
     "Expand your professional network, gain access to exclusive resources, and connect with individuals and organizations committed to advancing the digital landscape in Morocco.": "Élargissez votre réseau professionnel, accédez à des ressources exclusives, et connectez-vous avec des acteurs et des organisations engagés dans le développement du secteur digital au Maroc.",
-    "Who Are We?": "Qui sommes nous?",
+    "Who Are We?": "Qui sommes nous ?",
     "Digital Morocco is a community of businesses, institutions, investors, and local and international experts in the digital field, working to develop skills and technologies and to qualify startups and digital projects to meet the challenges of the market and changes in the business environment in Morocco and around the world.": "Digital Morocco est une communauté d'entreprises, d'institutions, d'investisseurs, ainsi que d'experts locaux et internationaux dans le domaine numérique. Notre objectif est de développer compétences et technologies, de qualifier les startups et les projets digitaux, pour relever les défis du marché et s'adapter aux évolutions de l'environnement des affaires au Maroc et à travers le monde.",
     "Our Mission": "Notre mission",
     "To help professionals in the digital field grow their businesses. Digitalization is now everywhere, making our mission even more important and essential than ever.": "Assister les acteurs de la sphère numérique dans l'expansion de leurs entreprises constitue notre vocation première. À présent, avec la digitalisation en constante expansion, notre mission revêt une importance et une urgence sans précédent.",
@@ -134,7 +137,7 @@
     "List of our partners": "Liste de nos partenaires",
     "Contribute to the growth of innovative ventures.": "Contribuer à la croissance des projets innovants.",
     "upcoming event": "événement à venir",
-    "Stay updated on tech talks, workshops, conferences, and more.": "Restez informé(e) des afterwork, ateliers, conférences et bien plus encore",
+    "Stay updated on tech talks, workshops, conferences, and more.": "Restez informé(e)s des afterwork, ateliers, conférences et bien plus encore",
     "Thanks for your order!":"Merci pour votre commande !",
     "You’re going to":"Vous allez à",
     "ticket sent to":" billet envoyé à",
@@ -495,8 +498,8 @@
     "Search Country": "Rechercher un pays",
     "Select City": "Sélectionner une ville",
     "Search City": "Rechercher une ville",
-    "Keep me updated on more events and news from this event organizer.": "Gardez-moi informé(e) sur d'autres événements Et actualités de cet organisateur d'événements.",
-    "Send me emails about the best events happening nearby or online.": "Envoyez-moi des e-mails sur les meilleurs événements à venir près de chez moi ou en ligne.",
+    "Keep me updated on more events and news from this event organizer.": "Tenez-moi informé(e) des prochains événements et actualités de cet organisateur d'événements.",
+    "Send me emails about the best events happening nearby or online.": "Envoyez-moi des e-mails sur les meilleurs événements à venir à proximité ou en ligne.",
     "Select Payment Method": "Choisir le Mode de Paiement",
     "Order Summary": "Résumé De La Commande",
     "1x Ticket": "1x Billet",
@@ -724,7 +727,7 @@
     "Event by":"Événement organisé par",
     "Launch Event 2024":"Événement de lancement 2024",
     "THE #1 PROFESSIONAL NETWORKING PLATFORM IN THE MEA REGION": "LA PREMIÈRE PLATEFORME DE RÉSEAUTAGE PROFESSIONNELLE DANS LA RÉGION MEA",
-    "Coming Soon": "Bientôt disponible",
+    "Coming Soon": "Prochainement",
     "24 hours a day, 7 days a week": "24H/24 et 7j/7",
     "The world of the Internet": "Le monde de l’Internet",
     "Ticket Start From": "Ticket à partir de",
