--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -25,7 +25,7 @@
     "Stay Tuned": "Restez informé",
     "Address": "Adresse",
     "Try Digital Morocco for free!": "Essayez Digital Morocco gratuitement !",
-    "Join the top 200 project leaders and enjoy 12 months of free access to our premier networking platform. Sign up now and connect with the best!":"Rejoignez les 200 premiers porteurs de projet et profitez de 12 mois d'accès gratuit à notre plateforme de networking de premier plan. Inscrivez-vous dès maintenant et connectez-vous avec les meilleurs !",
+    "Join the first 200 project leaders and enjoy 12 months of free access to our top-tier networking platform. Sign up now and connect with the best!":"Rejoignez les 200 premiers porteurs de projet et profitez de 12 mois d'accès gratuit à notre plateforme de networking de premier plan. Inscrivez-vous dès maintenant et connectez-vous avec les meilleurs !",
     "Start a 14 Day Free Trial on any of our paid plans. No credit card required.": "Commencez un essai gratuit de 14 jours sur l'une de nos formules payantes. Aucune carte de crédit requise.",
     "Terms of Use": "Conditions Générales d'Utilisation",
     "Legal Notice": "Mentions légales",
