--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -57,7 +57,7 @@
     "Enter your email to subscribe to our newsletter": "Entrez votre e-mail pour vous abonner à notre newsletter",
     "Subscribe":"S'abonner",
     "Subscribed":"Abonné(e)",
-    "Home": "Maison",
+    "Home": "Accueil",
     "Grow your business through networking and digital solutions!": "Boostez votre business grâce au networking et aux solutions digitales !",
     "Expand your professional network, gain access to exclusive resources, and connect with individuals and organizations committed to advancing the digital landscape in Morocco.": "Élargissez votre réseau professionnel, accédez à des ressources exclusives, et connectez-vous avec des acteurs et des organisations engagés dans le développement du secteur digital au Maroc.",
     "Who Are We?": "Qui sommes nous ?",
