--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -44,6 +44,7 @@
     "Your message": "Entrez votre texte",
     "Send Message": "Envoyer le message",
     "Sent":"Envoyé",
+    "Sending...":"Envoi en cours...",
     "General Inquiries": "Demandes générales",
     "Membership Support:": "Assistance pour les adhésions",
     "Get Started Now": "Commencer maintenant",
