--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -6,6 +6,7 @@
     "Pricing": "Tarifs",
     "Contact Us": "Contactez-nous",
     "Sign in": "Connexion",
+    "Connected" : "Connecté",
     "Get Started": "Démarrer",
     "Who We Are?": "Qui sommes-nous ?",
     "Why Join Us?": "Pourquoi nous rejoindre ?",
@@ -46,7 +47,7 @@
     "Sent":"Envoyé",
     "Sending...":"Envoi en cours...",
     "General Inquiries": "Demandes générales",
-    "Membership Support:": "Assistance pour les adhésions",
+    "Membership Support": "Assistance pour les adhésions",
     "Get Started Now": "Commencer maintenant",
     "Visit Us": "Rendez nous visite",
     "Social Media": "Réseaux sociaux",
