--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -193,6 +193,8 @@
     "Creation of 5 projects (included)*": "Création de 5 projets (inclus)*",
     "Transaction fees discount (-20%), payable in credits":"Réduction des frais de transaction (-20%), payable en crédits",
     "per month": "par mois",
+    "For":"Pour",
+    "months":"mois",
     "Upcoming": "À Venir",
     "*Possibility to add additional projects: up to 2 for the Standard Plan and 5 for the Premium Plan. See pricing conditions in our Terms of Use.":"*Possibilité d'ajouter des projets supplémentaires : jusqu'à 2 pour le Plan Standard et 5 pour le Plan Premium. Voir conditions tarifaires dans nos CGU.",
     "Start Free Trial": "Commencer l'essai gratuit",
