--- a/src/View/Language/Dictionaries/fr-FR.json
+++ b/src/View/Language/Dictionaries/fr-FR.json
@@ -744,6 +744,201 @@
     "Digital Morocco is more than just a professional networking platform, it's a dynamic ecosystem designed to foster innovation, collaboration, and growth within the entrepreneurial landscape. By connecting emerging startups, established businesses, ambitious project leaders, and visionary investors, Digital Morocco creates a space where ideas can flourish and opportunities can materialize.": "Digital Morocco va au-delà d'être une simple plateforme de networking professionnel, c'est un écosystème vibrant conçu pour stimuler l'innovation, la collaboration et la croissance au sein du paysage entrepreneurial. En reliant les startups émergentes, les entreprises établies, les porteurs de projets ambitieux et les investisseurs visionnaires, Digital Morocco crée un environnement où les idées peuvent s'épanouir et les opportunités se concrétiser.",
     "Through our online platform, Digital Morocco members can not only expand their professional network by connecting with key players in the entrepreneurial ecosystem but also access a multitude of resources and tools to support their growth and development. Whether it's finding a business partner, exploring investment opportunities, or sharing knowledge and experiences, Digital Morocco provides an environment conducive to exchange and collaboration.":"Sur notre plateforme en ligne, les membres de Digital Morocco peuvent non seulement étendre leur réseau professionnel en se connectant avec les acteurs clés de l'écosystème entrepreneurial, mais aussi accéder à une gamme variée de ressources et d'outils pour soutenir leur croissance et leur développement. Que ce soit pour trouver un partenaire commercial, explorer des opportunités d'investissement ou partager des connaissances et des expériences, Digital Morocco offre un cadre propice à l'échange et à la collaboration.",
     "In addition to our online presence, we also host a series of in-person events, such as conferences, workshops, seminars, and networking meetings, providing Digital Morocco members with the opportunity to meet, exchange ideas, and create synergies.": "En plus de notre présence virtuelle, nous organisons une série d'événements en personne, tels que des conférences, des ateliers, des séminaires et des rencontres de networking, offrant ainsi aux membres de Digital Morocco l'occasion de se rencontrer, d'échanger des idées et de créer des synergies.",
-    "These events are designed to inspire, educate, and motivate entrepreneurs at every stage of their journey. In summary, Digital Morocco is much more than just an online platform, it's a dynamic and dedicated community that aims to catalyze innovation and stimulate economic growth. Whether you're a budding entrepreneur, a seasoned investor, or a company seeking strategic partnerships, Digital Morocco is here to support you in achieving your goals and advancing your projects.": "Ces événements sont soigneusement conçus pour inspirer, éduquer et motiver les entrepreneurs à chaque étape de leur parcours. En conclusion, Digital Morocco représente bien plus qu'une simple plateforme en ligne, c'est une communauté dynamique et dédiée qui vise à catalyser l'innovation et à stimuler la croissance économique. Que vous soyez un entrepreneur débutant, un investisseur chevronné ou une entreprise à la recherche de partenariats stratégiques, Digital Morocco est là pour vous accompagner dans la réalisation de vos objectifs et pour faire progresser vos projets."
+    "These events are designed to inspire, educate, and motivate entrepreneurs at every stage of their journey. In summary, Digital Morocco is much more than just an online platform, it's a dynamic and dedicated community that aims to catalyze innovation and stimulate economic growth. Whether you're a budding entrepreneur, a seasoned investor, or a company seeking strategic partnerships, Digital Morocco is here to support you in achieving your goals and advancing your projects.": "Ces événements sont soigneusement conçus pour inspirer, éduquer et motiver les entrepreneurs à chaque étape de leur parcours. En conclusion, Digital Morocco représente bien plus qu'une simple plateforme en ligne, c'est une communauté dynamique et dédiée qui vise à catalyser l'innovation et à stimuler la croissance économique. Que vous soyez un entrepreneur débutant, un investisseur chevronné ou une entreprise à la recherche de partenariats stratégiques, Digital Morocco est là pour vous accompagner dans la réalisation de vos objectifs et pour faire progresser vos projets.",
+    "Afghanistan": "Afghanistan",
+  "Albania": "Albanie",
+  "Algeria": "Algérie",
+  "Andorra": "Andorre",
+  "Angola": "Angola",
+  "Antigua and Barbuda": "Antigua-et-Barbuda",
+  "Argentina": "Argentine",
+  "Armenia": "Arménie",
+  "Australia": "Australie",
+  "Austria": "Autriche",
+  "Azerbaijan": "Azerbaïdjan",
+  "Bahamas": "Bahamas",
+  "Bahrain": "Bahreïn",
+  "Bangladesh": "Bangladesh",
+  "Barbados": "Barbade",
+  "Belarus": "Biélorussie",
+  "Belgium": "Belgique",
+  "Belize": "Belize",
+  "Benin": "Bénin",
+  "Bhutan": "Bhoutan",
+  "Bolivia": "Bolivie",
+  "Bosnia and Herzegovina": "Bosnie-Herzégovine",
+  "Botswana": "Botswana",
+  "Brazil": "Brésil",
+  "Brunei": "Brunéi",
+  "Bulgaria": "Bulgarie",
+  "Burkina Faso": "Burkina Faso",
+  "Burundi": "Burundi",
+  "Cabo Verde": "Cap-Vert",
+  "Cambodia": "Cambodge",
+  "Cameroon": "Cameroun",
+  "Canada": "Canada",
+  "Central African Republic": "République centrafricaine",
+  "Chad": "Tchad",
+  "Chile": "Chili",
+  "China": "Chine",
+  "Colombia": "Colombie",
+  "Comoros": "Comores",
+  "Congo, Democratic Republic of the": "République démocratique du Congo",
+  "Congo, Republic of the": "République du Congo",
+  "Costa Rica": "Costa Rica",
+  "Croatia": "Croatie",
+  "Cuba": "Cuba",
+  "Cyprus": "Chypre",
+  "Czech Republic": "République tchèque",
+  "Denmark": "Danemark",
+  "Djibouti": "Djibouti",
+  "Dominica": "Dominique",
+  "Dominican Republic": "République dominicaine",
+  "Ecuador": "Équateur",
+  "Egypt": "Égypte",
+  "El Salvador": "Salvador",
+  "Equatorial Guinea": "Guinée équatoriale",
+  "Eritrea": "Érythrée",
+  "Estonia": "Estonie",
+  "Eswatini": "Eswatini",
+  "Ethiopia": "Éthiopie",
+  "Fiji": "Fidji",
+  "Finland": "Finlande",
+  "France": "France",
+  "Gabon": "Gabon",
+  "Gambia": "Gambie",
+  "Georgia": "Géorgie",
+  "Germany": "Allemagne",
+  "Ghana": "Ghana",
+  "Greece": "Grèce",
+  "Grenada": "Grenade",
+  "Guatemala": "Guatemala",
+  "Guinea": "Guinée",
+  "Guinea-Bissau": "Guinée-Bissau",
+  "Guyana": "Guyana",
+  "Haiti": "Haïti",
+  "Honduras": "Honduras",
+  "Hungary": "Hongrie",
+  "Iceland": "Islande",
+  "India": "Inde",
+  "Indonesia": "Indonésie",
+  "Iran": "Iran",
+  "Iraq": "Irak",
+  "Ireland": "Irlande",
+  "Israel": "Israël",
+  "Italy": "Italie",
+  "Jamaica": "Jamaïque",
+  "Japan": "Japon",
+  "Jordan": "Jordanie",
+  "Kazakhstan": "Kazakhstan",
+  "Kenya": "Kenya",
+  "Kiribati": "Kiribati",
+  "Korea, North": "Corée du Nord",
+  "Korea, South": "Corée du Sud",
+  "Kuwait": "Koweït",
+  "Kyrgyzstan": "Kirghizistan",
+  "Laos": "Laos",
+  "Latvia": "Lettonie",
+  "Lebanon": "Liban",
+  "Lesotho": "Lesotho",
+  "Liberia": "Libéria",
+  "Libya": "Libye",
+  "Liechtenstein": "Liechtenstein",
+  "Lithuania": "Lituanie",
+  "Luxembourg": "Luxembourg",
+  "Madagascar": "Madagascar",
+  "Malawi": "Malawi",
+  "Malaysia": "Malaisie",
+  "Maldives": "Maldives",
+  "Mali": "Mali",
+  "Malta": "Malte",
+  "Marshall Islands": "Îles Marshall",
+  "Mauritania": "Mauritanie",
+  "Mauritius": "Maurice",
+  "Mexico": "Mexique",
+  "Micronesia": "Micronésie",
+  "Moldova": "Moldavie",
+  "Monaco": "Monaco",
+  "Mongolia": "Mongolie",
+  "Montenegro": "Monténégro",
+  "Morocco": "Maroc",
+  "Mozambique": "Mozambique",
+  "Myanmar (Burma)": "Myanmar (Birmanie)",
+  "Namibia": "Namibie",
+  "Nauru": "Nauru",
+  "Nepal": "Népal",
+  "Netherlands": "Pays-Bas",
+  "New Zealand": "Nouvelle-Zélande",
+  "Nicaragua": "Nicaragua",
+  "Niger": "Niger",
+  "Nigeria": "Nigéria",
+  "North Macedonia": "Macédoine du Nord",
+  "Norway": "Norvège",
+  "Oman": "Oman",
+  "Pakistan": "Pakistan",
+  "Palau": "Palaos",
+  "Palestine": "Palestine",
+  "Panama": "Panama",
+  "Papua New Guinea": "Papouasie-Nouvelle-Guinée",
+  "Paraguay": "Paraguay",
+  "Peru": "Pérou",
+  "Philippines": "Philippines",
+  "Poland": "Pologne",
+  "Portugal": "Portugal",
+  "Qatar": "Qatar",
+  "Romania": "Roumanie",
+  "Russia": "Russie",
+  "Rwanda": "Rwanda",
+  "Saint Kitts and Nevis": "Saint-Christophe-et-Niévès",
+  "Saint Lucia": "Sainte-Lucie",
+  "Saint Vincent and the Grenadines": "Saint-Vincent-et-les-Grenadines",
+  "Samoa": "Samoa",
+  "San Marino": "Saint-Marin",
+  "Sao Tome and Principe": "Sao Tomé-et-Principe",
+  "Saudi Arabia": "Arabie saoudite",
+  "Senegal": "Sénégal",
+  "Serbia": "Serbie",
+  "Seychelles": "Seychelles",
+  "Sierra Leone": "Sierra Leone",
+  "Singapore": "Singapour",
+  "Slovakia": "Slovaquie",
+  "Slovenia": "Slovénie",
+  "Solomon Islands": "Îles Salomon",
+  "Somalia": "Somalie",
+  "South Africa": "Afrique du Sud",
+  "South Sudan": "Soudan du Sud",
+  "Spain": "Espagne",
+  "Sri Lanka": "Sri Lanka",
+  "Sudan": "Soudan",
+  "Suriname": "Suriname",
+  "Sweden": "Suède",
+  "Switzerland": "Suisse",
+  "Syria": "Syrie",
+  "Taiwan": "Taïwan",
+  "Tajikistan": "Tadjikistan",
+  "Tanzania": "Tanzanie",
+  "Thailand": "Thaïlande",
+  "Timor-Leste": "Timor oriental",
+  "Togo": "Togo",
+  "Tonga": "Tonga",
+  "Trinidad and Tobago": "Trinité-et-Tobago",
+  "Tunisia": "Tunisie",
+  "Turkey": "Turquie",
+  "Turkmenistan": "Turkménistan",
+  "Tuvalu": "Tuvalu",
+  "Uganda": "Ouganda",
+  "Ukraine": "Ukraine",
+  "United Arab Emirates": "Émirats arabes unis",
+  "United Kingdom": "Royaume-Uni",
+  "United States": "États-Unis",
+  "Uruguay": "Uruguay",
+  "Uzbekistan": "Ouzbékistan",
+  "Vanuatu": "Vanuatu",
+  "Vatican City": "Vatican",
+  "Venezuela": "Venezuela",
+  "Vietnam": "Viêt Nam",
+  "Yemen": "Yémen",
+  "Zambia": "Zambie",
+  "Zimbabwe": "Zimbabwe"
 
 }
